re PR middle-end/21492 (ICE in try_crossjump_to_edge)

PR middle-end/21492
	* cfgcleanup.c (try_crossjump_to_edge): update_forwarder_flag for
	src2 if src2 has been split.

	* g++.dg/opt/crossjump1.C: New test.

From-SVN: r100166